# demo_vm_multi

./: CMakeLists.txt  README.md  vm_multi.camkes
plat/qemu-arm-virt/: plat.camkes  plat.cmake
